--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"token","client":"klient","tag":"!","case":"true","separator":"\\s+","ownerId":"wlasciciel"}
+{"token":"NjMxMTU1MTMwMDcwNDY2NTkx.XZ9SmA.rybZSHz6IpwSoz66ullfzkFzOVs","client":"631155130070466591","tag":"!","case":"true","separator":"\\s+","ownerId":"389156803742662662"}
